@@ -48,9 +48,10 @@ public:
     virtual void mouseMoveEvent(QMouseEvent* e);
     virtual void mousePressEvent(QMouseEvent* e);
 
-    void WriteOutput(QString out);
-    QString ReadChar(int len = 1);
     void Clear();
+    bool InputAvailable();
+    QString ReadChar(int len = 1);
+    void WriteOutput(QString out);
 
 private:
     QString inputBuffer;
